# automated-testing

./: .gitignore  README.md  package.json  pyproject.toml
cypress/e2e/: spec.cy.js
src/: main.py
tests/e2e_playwright/: test_main_flow.py
tests/e2e_playwright/pages/: dashboard_page.py  login_page.py
tests/legacy/: test_selenium.py
